Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36672

Mac OS: Regression: Dialog positions are much farther up than expected when multiple monitors are used

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.3.0 Beta1
    • 5.2.0
    • GUI: Look'n'Feel
    • Macbook Pro Retina, OS X 10.9.1.
      Problem occurs when external (non-retina) monitors are connected.
      Problem doesn't occur when using single (retina) laptop display.
    • macOS
    • 9d2d4ad4833ac815eda9c99eb97d421234a0c4cd

      External monitors without retina support are connected.

      Popup widgets do not appear at their expected location, but rather much farther up than expected. For example,

      • Type-to-locate window (see attached screenshot)
      • Switch files via drop-down at the top of the editor. This popup is no longer accessible as it is entirely off-screen
      • Switch files via alt-tab appears at the top of the screen rather than middle

      The problem does not appear when external (non-retina) monitors are removed.

        For Gerrit Dashboard: QTBUG-36672
        # Subject Branch Project Status CR V

            sorvig Morten Sørvig
            swongu s
            Votes:
            10 Vote for this issue
            Watchers:
            22 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes